--- a/templates/student_signup.html
+++ b/templates/student_signup.html
@@ -5,6 +5,9 @@
 {% block content %}
 <div class="auth-container">
     <div class="auth-card card">
+        <div class="auth-logo">
+            <img src="{{ url_for('static', filename='study_coach_logo.png') }}" alt="Study Coach" class="auth-logo-img">
+        </div>
         <h2 class="auth-title">Student Sign Up</h2>
         <p class="auth-subtitle">Start your learning journey with StudyCoach</p>
         
