--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,7 @@
                         <a href="{{ url_for('teacher_main') }}" class="nav-link">Dashboard</a>
                     {% endif %}
                     <a href="{{ url_for('ai_page') }}" class="nav-link">AI Assistant</a>
+                    <a href="{{ url_for('study_tools.study_tools_dashboard') }}" class="nav-link">Study Tools</a>
                     <a href="{{ url_for('logout') }}" class="nav-link">Logout</a>
                 {% else %}
                     <a href="{{ url_for('login') }}" class="nav-link">Login</a>
